--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section>
       <figure>
-        <img src="img/track_changes.png" alt="Tracking Changes is not the Answer" / style="width:80%;">
+        <img src="img/track_changes.PNG" alt="Tracking Changes is not the Answer" / style="width:80%;">
       </figure>
       <h2>Tracking Changes is not the Answer</h2>
     </section>
