--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <section>
 
   <section>
-    <h2> Why does this matter to the Humanities? </h2>
+    <h2> Why does this matter to the Humanities? CUZ IT'S SCIENCE!</h2>
   </section>
 
   <section>
